infra/k8s/prod/deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: nginx
  namespace: cloudcat
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: docker.pkg.github.com/hitman99/cloudcat/nginx:v0.1
        ports:
        - containerPort: 80
      imagePullSecrets:
        - name: github
