infra/k8s/prod/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: nginx
  namespace: cloudcat
spec:
  selector:
      app: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
